--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -71,6 +71,9 @@
                                 <h1>Comments:</h1>
                             </div>
                         </div>
+                        <div class="mb-4 rounded-full">
+                            <input type="text" name="" id="comment" placeholder="Add a comment!" class="mt-4 w-full px-4 py-3 rounded-full bg-gray-200 mt-2 border focus:border-black focus:bg-white focus:outline-none " autofocus autocomplete required>
+                        </div>
                     </div>
                     {{/each}}
                 </div>
